# fast-xml-flattener

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/scripts/: bump_version.py  update_changelog.py
.github/workflows/: ci.yml  release.yml
benches/: benchmark.py
python/fast_xml_flattener/: __init__.py  _fast_xml_flattener.pyi  _object.py
src/: csv_out.rs  dict.rs  error.rs  json.rs  lib.rs  node.rs  parquet_out.rs  parser.rs  record.rs
tests/: conftest.py  test_edge_cases.py  test_from_file.py  test_to_csv.py  test_to_dict.py  test_to_flatten_dict.py  test_to_flatten_json.py  test_to_json.py  test_to_object.py  test_to_parquet.py
