[package]
name = "fast-xml-flattener"
version = "0.1.7"
edition = "2021"
authors = ["Andrzej Jończy <contact@ajtee.pl>"]
description = "Fast XML flattening library with Python bindings"
license = "MIT"
repository = "https://github.com/andree0/fast-xml-flattener"
readme = "README.md"

[lib]
name = "fast_xml_flattener"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "indexmap"] }
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
csv = "1.3"
arrow = "58"
parquet = { version = "58", default-features = false, features = ["arrow"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
