[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fast-xml-flattener"
version = "0.1.1"
description = "Fast XML flattening library with Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrzej Jończy", email = "contact@ajtee.pl" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.5",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=1.20",
    "pre-commit>=4.5",
    "pyarrow>=17",
]
benchmark = [
    "xmltodict>=0.13",
    "lxml>=5.0",
]

[project.urls]
Homepage = "https://github.com/andree0/fast-xml-flattener"
Documentation = "https://github.com/andree0/fast-xml-flattener"
Repository = "https://github.com/andree0/fast-xml-flattener"
Issues = "https://github.com/andree0/fast-xml-flattener/issues"

[tool.maturin]
module-name = "fast_xml_flattener"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["benches/"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "xmltodict", "lxml", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "--strict-markers -v --cov=fast_xml_flattener --cov-report=term-missing"
